recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not found: type orange
		 	setCouleur(couleur:orange)
                                           ^